fix covers bg color

--- a/src/css/covers.css
+++ b/src/css/covers.css
@@ -14,6 +14,7 @@
 
 .covers {
   padding-top: 64px;
+  background-color: #1c1d20;
 }
 
 .covers-container {
